--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
                     <text x="50" y="25" text-anchor="middle" fill="#aaa" font-size="8">UNIVERSITY OF PRETORIA</text>
                 </svg>
             </div>
-            <p>© 2025 Dr. Oscar Eybers | Academic Publications Portal</p>
-            <p>Department of Education Innovation | Faculty of Education</p>
+            <p>© 2025 Dr. Oscar Eybers | Jouornal Article Portal</p>
+            <p>Unit for Academic Literacy | University of Pretoria</p>
         </div>
     </div>
 
