--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
  
     <div class="container">
         <header>
-            <h1>Research Publications</h1>
-            <p class="subtitle">Explore the academic contributions of Dr. Oscar Eybers in the fields of academic literacy, decoloniality, and higher education transformation.</p>
+            <h1>Journal Articles</h1>
+            <p class="subtitle">Explore the academic contributions of Dr. Oscar Eybers in the fields of academic literacy, sociocultural linguistics, and higher education transformation.</p>
             
             <!-- --- Updated Link --- -->
             <a href="https://oeybers-cpu.github.io/chapters/" class="eybers-chapters-link">Visit Eybers Chapters</a>
