--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
     <div class="container">
         <header>
             <h1>Research Publications</h1>
-            <p class="subtitle">Explore the academic contributions of Dr. Oscar Eybers in the fields of academic literacy, decoloniality, and higher education transformation.</p>
+            <p class="subtitle">Explore the academic contributions of Dr. Oscar Eybers in the fields of academic literacy, linguistics, and higher education transformation.</p>
             
             <div class="contact-card">
                 <h2><i class="fas fa-envelope"></i> Contact Information</h2>
